--- a/package.json
+++ b/package.json
@@ -3,13 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.11",
+    "i": "^0.3.7",
+    "lodash.debounce": "^4.0.8",
+    "msw": "^0.42.1",
+    "npm": "^8.12.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.2",
+    "react-responsive-modal": "^6.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.4",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.17",
+    "toastify": "^2.0.1",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
